GA-24: improved coverage